--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,6 @@ dependencies = [
     "docker>=7.1.0",
     "humanize>=4.12.3",
     "psutil>=7.0.0",
-    "reactivex>=4.0.4",
     "rumps>=0.4.0",
+    "requests>=2.31.0",
 ]
